Refactor cache management tests and enhance CacheVersion functionality. Add caffeine and Chronicle to improve heap usage and lookup time. Add release.yml